--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Backend for Shopping Store",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",               // for Vercel
-    "dev": "nodemon server.js",              // for local development
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["shopping", "backend", "ecommerce", "express", "vercel"],
+  "keywords": [],
   "author": "Abdur Rahman",
   "license": "ISC",
   "type": "commonjs",
